[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yadraw_yakovkinii"
version = "0.0.1"
authors = [
  { name="Ivan I. Yakovkin", email="yakovkinii@gmail.com" },
]
description = "Graphical library over pygame"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EmixD/yadraw"
"Bug Tracker" = "https://github.com/EmixD/yadraw/issues"