[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yadraw"
version = "0.0.8"
authors = [
    { name = "Ivan I. Yakovkin", email = "yakovkinii@gmail.com" },
]
description = "Graphical library over pygame"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'attrs',
    'pygame',
    'yatools',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EmixD/yadraw"
"Bug Tracker" = "https://github.com/EmixD/yadraw/issues"